fix nav z-index

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -76,6 +76,7 @@
     margin-right: 30px;
     position: fixed;
     right: 0;
+    z-index: 30;
 
     a {
       margin-top: 15px;
